<resources>
    <string name="app_name">정각에 해야지</string>
    <string name="home">Home</string>
    <string name="schedule_eng">Schedule</string>
    <string name="routine_eng">Routine</string>
    <string name="calendar_eng">Calender</string>
    <string name="setting_eng">Setting</string>

    <string name="empty"/>

    <string name="daily">매일</string>
    <string name="empty_string"/>
    <string name="days">" 월 화 수 목 금 토 일"</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <string-array name = "ScheduleMenu">
        <item>수정</item>
        <item>삭제</item>
        <item>완료</item>
    </string-array>

    <string name="date_picker_title">기간을 선택해 주세요.</string>
    
    <string name="permission_denied_message">권한이 거부되었습니다. 설정 > 권한에서 허용해주세요.</string>
    <string name="permission_denied_toast_message">권한 거부</string>

    <string name="routine_delete_dialog_title">다음 내용을 삭제하시겠습니까?</string>

    <string name="dialog_positive_text">확인</string>
    <string name="dialog_negative_text">취소</string>

    <string name="calender_icon_button">캘린더 아이콘 버튼</string>
    <string name="title">제목</string>
    <string name="cancel">취소</string>
    <string name="register">등록</string>

    <string name="schedule">일정</string>
    <string name="today_todo">오늘 할 일</string>
    <string name="schedule_title">일정 이름</string>
    <string name="optional_field">선택 사항</string>
    <string name="detail_content">상세 내용</string>
    <string name="period">기간</string>
    <string name="tilde">~</string>
    <string name="recent_sort">최신순</string>
    <string name="deadline_sort">마감순</string>

    <string name="routine_done_checked">루틴 완료 여부</string>

    <string name="routine_add_detail">상세</string>
    <string name="routine_add_detail_hint">상세 루틴을 입력해주세요.</string>
    <string name="routine_more_detail_add">상세 루틴 추가</string>
    <string name="routine_detail_delete">상세 루틴 삭제</string>

    <string name="routine_register_floating_button">루틴 등록 버튼</string>
    <string name="schedule_register_floating_button">일정 등록 버튼</string>

    <string name="notification_reset_ticker">루틴 초기화</string>
    <string name="notification_reset_content">루틴 초기화 중</string>

    <string name="widget_title">할 일</string>
    <string name="widget_reload">새로 고침</string>

    <string name="week">1주</string>
    <string name="month">1달</string>
    <string name="half_of_year">6달</string>
    <string name="year">1년</string>

    <string name="total">전체</string>
    <string name="success">완료</string>
    <string name="fail">실패</string>

    <string name="next">다음</string>
    <string name="add_schedule_title">추가 할 스케줄의 제목을 입력해주세요.</string>
    <string name="add_schedule_date">날짜를 입력해주세요.</string>
    <string name="delete_end_date">종료일 삭제</string>

    <string name="start_date">시작일</string>
    <string name="end_date">종료일</string>
    <string name="date_type">YYYY-MM-DD</string>
    <string name="add_end_date">당일 일정이 아니신가요?</string>

    <string name="widget_schedule_title_preview">스케줄</string>
    <string name="widget_schedule_d_day_preview">D-15</string>
    <string name="widget_routine_title_preview">테스트</string>
    <string name="widget_routine_time_preview">00:00</string>
</resources>
