<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.example.todo_list.ui.routine.add.RoutineRegisterActivity" />

        <variable
            name="viewModel"
            type="com.example.todo_list.ui.routine.add.RoutineRegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:theme="@style/TimePickerStyle"
            android:timePickerMode="spinner"
            app:onTimeChanged="@{viewModel.setTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/routine_rectangle"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePicker"
            app:layout_constraintVertical_bias="0.186">

            <TextView
                android:id="@+id/choice_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{viewModel.checkedDayText}"
                android:textColor="#202020"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choice_day">

                <ToggleButton
                    android:id="@+id/sunday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="@color/red"
                    android:textOff="일"
                    android:textOn="일"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/monday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="#202020"
                    android:textOff="월"
                    android:textOn="월"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/tuesday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="#202020"
                    android:textOff="화"
                    android:textOn="화"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/wednesday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="#202020"
                    android:textOff="수"
                    android:textOn="수"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/thursday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="#202020"
                    android:textOff="목"
                    android:textOn="목"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/friday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="#202020"
                    android:textOff="금"
                    android:textOn="금"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/saturday"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle"
                    android:textColor="@color/blue"
                    android:textOff="토"
                    android:textOn="토"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints="@string/title"
                android:backgroundTint="@color/gray"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:paddingHorizontal="20dp"
                android:textColor="@color/edittext_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cycleCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/cancel"
                android:textColor="#202020"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="@{() -> activity.finish()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cycleRegister"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cycleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/register"
                android:textColor="#202020"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cycleCancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
